# AILens

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/metrics/: registry.py
backend/app/mock/: __init__.py  constants.py  store.py
backend/app/models/: schemas.py
backend/app/observability/: telemetry.py
backend/app/repositories/: __init__.py  base.py  dependencies.py  traceql_experiment.py
backend/app/routers/: agent_services.py  alerts.py  annotations.py  experiments.py  iterations.py  query.py  (+8 more)
backend/tests/: conftest.py  test_analysis_api.py  test_api_agent_services.py  test_api_contract.py  test_api_edge_cases.py  test_api_experiments.py  test_api_projects.py  test_api_stats.py  test_api_tasks_offline.py  test_api_traces.py  test_data_pipeline.py  test_integration.py  test_m2_features.py  test_m3_features.py  test_m4_features.py  test_mock_consistency.py  test_mock_generator.py  test_mock_prd_alignment.py  test_new_metrics.py  test_observability.py  test_observability_extra.py  test_promql_rank.py  test_query_api.py  test_regression_api_contract.py  test_regression_features.py  test_repository_di.py  test_scaffold_language_filter.py  test_schema_contract.py  test_schemas.py  test_sql_aggregated_extractors.py  test_sql_metrics_performance.py  test_tool_analysis_api.py  test_trace_query_router.py  test_traceql_api.py  test_traceql_experiment_repo.py  test_turn_metrics.py
(+239 files in other folders)
